--- a/TODO
+++ b/TODO
@@ -1,1 +1,3 @@
+Things I want to do in the future include adding a dropdown for downloading and installing Linux distributions instead of having the user download the ISO manually, the capability to manage the size of the COW casper-rw partition, and adding more functinality like booting memtest or MS-DOS, or any other floppy images he user might have (or we might rip directly from the app). I also want to add PolicyKit support, but that crap is really, really badly documented, so I have temporarily resorted to do the gksu trick you did in your app.
+
 Nothing yet.
