--- a/README
+++ b/README
@@ -1,16 +1,28 @@
 = Portable Linux - the bootable Linux creator =
 
-Portable Linux is a tool that lets you create bootable USB and removable drives using popular Live CDs based on Casper.  Portable Linux sports some unique features:
+Portable Linux is a tool that lets you create bootable USB and
+removable drives using popular Live CDs based on Casper.  Portable
+Linux sports some unique features:
 
-   1. The live setups created by this program let you use the remaining disk space on your USB drive to store and transport files between computers, as usual.
-   2. What's more, if your distribution supports persistence, the files and settings you edit on your live Linux distribution are persisted across reboots.
-   3. Finally, you can access the area used to store your files just fine from within your Linux distribution.
+1. The live setups created by this program let you use the remaining
+   disk space on your USB dri ve to store and transport files between
+   computers, as usual.
 
-So you can create your live Linux distro, install a couple of codecs and applications on it, and you've got a complete multimedia center on your pocket!
+2. What's more, if your distribution supports persistence, the files
+   and settings you edit on your live Linux distribution are persisted
+   across reboots.
+
+3. Finally, you can access the area used to store your files just fine
+   from within your Linux distribution.
+
+So you can create your live Linux distro, install a couple of codecs
+and applications on it, and you've got a complete multimedia center on
+your pocket!
 
 Supported distributions at the moment include all the Ubuntu variants.
 
-It is free software distributed under the GPL version 3, and it uses the powerful Parted partitioning software.
+It is free software distributed under the GPL version 3, and it uses
+the powerful Parted partitioning software.
 
 You can find the latest news and versions of this software at:
   http://rudd-o.com/new-projects/portablelinux
@@ -23,17 +35,28 @@ Portable Linux requires the following to run:
 - The GTK+ bindings for Python
 - The libglade bindings for Python
 - sfdisk from the util-linux-ng package
-- Administrative privileges (root access) on the machine you're running it
+- Administrative privileges (root access) on the machine you're
+  running it
 
-Additionally, you must have at least one compatible (Casper-based) ISO image.
-All the *buntu live CDs are compatible.
+Additionally, you must have at least one compatible (Casper-based) ISO
+image.  All the *buntu live CDs are compatible.
 
 == Help! ==
 
-Sure, Portable Linux needs all the help you can muster!  Its Web site is completely open for contribution.
+Sure, Portable Linux needs all the help you can muster!  Its Web site
+is completely open for contribution.
 
  * If you find a bug, please file it using the bug tracker.
- * If you have patches to contribute, please file a bug too (since we're using Git, chances are we'll be able to pull and push code right from the start).
- * This project needs a logo and an icon.  If you're an artist, you're welcome to help!
- * If you have knowledge of gettext translations, check the code out and translate it.
- * In fact, if you have any idea that you'd like to share with us, do so as well.  Add your proposal to our Proposals section!
+
+ * If you have patches to contribute, please file a bug too (since
+   we're using Git, chances are we'll be able to pull and push code
+   right from the start).
+
+ * This project needs a logo and an icon.  If you're an artist, you're
+   welcome to help!
+
+ * If you have knowledge of gettext translations, check the code out
+   and translate it.
+
+ * In fact, if you have any idea that you'd like to share with us, do
+   so as well.  Add your proposal to our Proposals section!
